<resources>
    <string name="app_name">CineXpert</string>
    <string name="login">Login</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidar_password">He olvidado mi contraseña</string>
    <string name="mostrar_password">Mostrar contraseña</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="confirmarPassword">Confirmar contraseña</string>
    <string name="ya_registrado">Ya estás registrado, inicia sesión aquí</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="tengo_cuenta">Tengo cuenta creada\n</string>
    <string name="home">Inicio</string>
    <string name="mapa">Ubicación</string>
    <string name="user">Tu cuenta</string>
    <string name="chatbot">Chat</string>
    <string name="ultimos_estrenos">Últimos estrenos</string>
    <string name="mas_taquilleras">Más taquilleras</string>
    <string name="futuros_estrenos">Próximos lanzamientos</string>
    <string name="map">Mapa</string>
    <string name="iniciar_sesion_google">Iniciar sesión con Google</string>
    <string name="default_web_client_id">708388955375-302jepa1vmcm1gd5s598rbqe7hlba1tp.apps.googleusercontent.com</string>
    <string name="chat" />
    <string name="add_to_favorites">Añadir a favoritos\n</string>
    <string name="reparto">Reparto</string>
    <string name="favorites">Favoritos</string>
    <string name="mensaje_fav">Todavía no hay películas añadidas a favoritos</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="save_profile">Guardar cambios</string>
    <string name="tucuenta">Tu Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
</resources>