<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inicio">

    <fragment
        android:id="@+id/inicio"
        android:name="com.arc.cinexpert.InicioFragment"
        android:label="@string/home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/mapa"
        android:name="com.arc.cinexpert.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.arc.cinexpert.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />
</navigation>
