<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="153dp"
        android:layout_height="137dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/circulo"
        android:padding="20dp"
        android:src="@drawable/logo_app"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="59dp"
        android:background="@drawable/esquina_curva_background"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/txvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvLogin"
            android:layout_marginTop="32dp"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="12dp"
            android:background="@drawable/edtext_background"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtUsuario"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edtext_background"
            android:autofillHints="password"/>

        <CheckBox
            android:id="@+id/chbxMostrarPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPassword"
            android:layout_marginTop="8dp"
            android:text="@string/mostrar_password"
            android:textColor="@color/black"
            android:buttonTint="@color/black"
            android:padding="8dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chbxMostrarPassword"
            android:layout_marginTop="16dp"
            android:text="@string/iniciar_sesion"
            android:background="@drawable/iniciosesion_background"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/txvRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/registrarse"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/txvOlvidoPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvRegistro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/olvidar_password"
            android:textColor="@android:color/holo_blue_dark"/>
    </RelativeLayout>
</RelativeLayout>
